--- a/style.css
+++ b/style.css
@@ -3,3 +3,29 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+
+#featured-property {
+  text-align: center;
+}
+
+nav a {
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: burlywood;
+}
+
+#featured-property p {
+  width: 800px;
+  text-align: center;  
+  margin: 20px auto;   
+}
+
+div {
+  float: left;
+  background-color: cadetblue;
+  text-align: center;
+  width: 25%;
+}
